--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -60,6 +60,18 @@ RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
 
 
+COPY ./compose/local/django/celery/worker/start /start-celeryworker
+RUN sed -i 's/\r$//g' /start-celeryworker
+RUN chmod +x /start-celeryworker
+
+COPY ./compose/local/django/celery/beat/start /start-celerybeat
+RUN sed -i 's/\r$//g' /start-celerybeat
+RUN chmod +x /start-celerybeat
+
+COPY ./compose/local/django/celery/flower/start /start-flower
+RUN sed -i 's/\r$//g' /start-flower
+RUN chmod +x /start-flower
+
 
 # copy application code to WORKDIR
 COPY . ${APP_HOME}
