--- a/local.yml
+++ b/local.yml
@@ -5,7 +5,7 @@ volumes:
   flamerelay_local_postgres_data_backups: {}
 
 services:
-  django:
+  django: &django
     build:
       context: .
       dockerfile: ./compose/local/django/Dockerfile
@@ -13,6 +13,7 @@ services:
     container_name: flamerelay_local_django
     depends_on:
       - postgres
+      - redis
       - mailhog
     volumes:
       - .:/app:z
@@ -56,3 +57,37 @@ services:
     container_name: flamerelay_local_mailhog
     ports:
       - '8025:8025'
+
+  redis:
+    image: redis:6
+    container_name: flamerelay_local_redis
+
+  celeryworker:
+    <<: *django
+    image: flamerelay_local_celeryworker
+    container_name: flamerelay_local_celeryworker
+    depends_on:
+      - redis
+      - postgres
+      - mailhog
+    ports: []
+    command: /start-celeryworker
+
+  celerybeat:
+    <<: *django
+    image: flamerelay_local_celerybeat
+    container_name: flamerelay_local_celerybeat
+    depends_on:
+      - redis
+      - postgres
+      - mailhog
+    ports: []
+    command: /start-celerybeat
+
+  flower:
+    <<: *django
+    image: flamerelay_local_flower
+    container_name: flamerelay_local_flower
+    ports:
+      - '5555:5555'
+    command: /start-flower
