switch challenge to DNS+cloudflare

--- a/compose/production/traefik/traefik.yml
+++ b/compose/production/traefik/traefik.yml
@@ -25,8 +25,8 @@ certificatesResolvers:
       email: 'jvacek@flamerelay.org'
       storage: /etc/traefik/acme/acme.json
       # https://docs.traefik.io/master/https/acme/#httpchallenge
-      httpChallenge:
-        entryPoint: web
+      dnsChallenge:
+        provider: cloudflare
 
 http:
   routers:
