move flows into one file

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: ci
+name: cicd
 
 # Enable Buildkit and let compose use it to speed up image building
 env:
@@ -52,3 +52,17 @@ jobs:
 
       - name: Tear down the Stack
         run: docker-compose -f local.yml down
+
+  deploy:
+    needs: [pytest, linter]
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Start Deployment via SSH
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USERNAME }}
+          key: ${{ secrets.DEPLOY_KEY }}
+          port: ${{ secrets.DEPLOY_PORT }}
+          script: ./Git/flamerelay/deploy.sh
