Fix script path

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -65,4 +65,4 @@ jobs:
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_KEY }}
           port: ${{ secrets.DEPLOY_PORT }}
-          script: ./Git/flamerelay/deploy.sh
+          script: Git/FlameRelay/deploy.sh
